--- a/index.html
+++ b/index.html
@@ -3,12 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Adventurous trip recommendation in America Home Page</title>
-     <script src="https://kit.fontawesome.com/d74d5d6e91.js" crossorigin="anonymous"></script>
+    <title> Home Page </title>
+    <link rel="stylesheet" href="CSS/style1.css">
+    <script src="https://kit.fontawesome.com/d74d5d6e91.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="images/logo.jpeg">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg ">
+      <img src="images/logo.png" style="width: 80px; height: 80px; margin-left: 60px;">
+        <a class="navbar-brand mg-4px" style="font-size: medium;" href="index.html">Doppelganger <br>Quaters</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="div1  collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Travel guide </a>
+            </li>
+            <li class="nav-item ">
+            <div class="dropdown">
+              <a class=" btn dropdown-toggle"  data-bs-toggle="dropdown" aria-expanded="false">
+                Events
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">This month</a></li>
+                <li><a class="dropdown-item" href="#">Festivals </a></li>
+                <li><a class="dropdown-item" href="#"> Holidays </a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          </ul>
+        </div>
+        <div style="margin-right:50px ;">
+          <a><button class="button button2">Sign up</button></a>
+          <a>Log in</a>
+        </div>
+      </nav>
+      <div class="bg-image"></div>
+<div>
+  <img class="bg-image" src="images/america.jpeg" alt="Snow">
+  <div class="bg-text">
+    <h2>BEST PLACES TO TRAVEL IN </h2>
+    <h1 style="font-size:50px"> AMERICA </h1>
+    <p> 2024 </p>
+  </div>
+</div>
+<br><hr><br>
+<div class="container div2">
+  <div class="row">
+    <div class="col-md-4">
+  <a> <img src="images/north.jpeg" style="border-radius: 10px; width: 95%;"> </a><br><br>
+  <h2 style="text-align: center;"> North America</h2>
+  <p style="text-align: center;" >The heart of North America beats through towering forests, undulating fields, high-plain deserts, pulsating metropolises and offbeat oases.</p>
+  </div>
+  <div class="col-md-4">
+    <a> <img src="images/central.jpeg" style="border-radius: 10px; width: 95%;"> </a><br><br>
+    <h2 style="text-align: center;">Central America</h2>
+    <p style="text-align: center;"> With cerulean seas and verdant forests, magnificent Maya ruins and smoking volcanoes, Central America is like a tropical fairy tale except all of it is real.</p>
+    <p></p>
+    </div>
+    <div class="col-md-4">
+      <a> <img src="images/south.jpeg" style="border-radius: 10px; width: 95%;"> </a><br><br>
+      <h2 style="text-align: center;">South America</h2>
+      <p style="text-align: center;"> Andean peaks, Amazonian rainforest, Patagonian glaciers, Incan ruins, white-sand beaches and vertiginous nightlife: the wonders of South America set the stage for incredible adventures.</p>
+      </div>
+  </div>
+
+</div>
+
+
 </body>
 </html>
